--- a/Project.toml
+++ b/Project.toml
@@ -1,8 +1,11 @@
 name = "ReDiverse"
 uuid = "3955ef1e-a3c5-4a6e-afd8-9ba03e5c0c85"
 authors = ["Xijiang Yu <xijiang@users.noreply.github.com>"]
-version = "0.2.0"		# QC
+version = "0.2.0"
 
 [deps]
-CxxWrap = "1f15a43c-97ca-5a2a-ae31-89f07a497df4"
+GR = "28b8d3ca-fb5f-59d9-8090-bfdbd6d07a71"
+IJulia = "7073ff75-c697-5162-941a-fcdaad2a7d2a"
+LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
