--- a/Project.toml
+++ b/Project.toml
@@ -1,10 +1,11 @@
 name = "ReDiverse"
 uuid = "3955ef1e-a3c5-4a6e-afd8-9ba03e5c0c85"
 authors = ["Xijiang Yu <xijiang@users.noreply.github.com>"]
-version = "0.4.6"
+version = "0.4.7"
 
 [deps]
 LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
+Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
