--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["Xijiang Yu <xijiang@users.noreply.github.com>"]
 version = "0.4.7"
 
 [deps]
+ABG = "6f4575a6-10e7-48b2-be77-2501b81e0c82"
 LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
